[package]
name = "hangcrab"
version = "0.2.0"
edition = "2024"
rust-version = "1.96"
description = "Rust-powered, CLI implementation of Hangman"
readme = "README.md"
repository = "https://github.com/mattaroni/hangcrab"
license = "MIT"
publish = false

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
futures-util = "0.3.32"
rand = "0.10.1"
reqwest = { version = "0.13.4", features = ["stream"] }
tokio = { version = "1.52.3", features = ["full"] }
